--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
    white-space: nowrap; 
+   list-style-type: none;
 }
 
 @font-face {
