formatting code with eslint and prittier

--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,7 @@ code {
   src: local('orangina'), url('./fonts/orangina.otf') format('opentype');
   font-weight: bolder;
 }
+
+.help___me {
+  list-style-type: none;
+}
